# time-series-prediction

./: .gitignore  README.md  pyproject.toml  run_contune_trainer.py  run_predictor.py  run_trainer.py
time_series_prediction/common/: column_parser.py
time_series_prediction/scripts/: predict.py  train.py
time_series_prediction/seq2seq/: attention_model.py
