[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "time-series-prediction"
version = "0.1.0"
authors = [{name = "Vladislav", email = "velikiy6789@gmail.com"}]
description = "Library for time series forecasting using ML models."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "AGPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "colorama>=0.4.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
plot = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]
gpu = [
    "torch>=2.0.0+cu118; platform_system == 'Linux'",
    "torch>=2.0.0+cu117; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/vladislav032/time-series-prediction"
Documentation = "https://github.com/vladislav032/time-series-prediction#readme"
Repository = "https://github.com/vladislav032/time-series-prediction.git"
BugTracker = "https://github.com/vladislav032/time-series-prediction/issues"